<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_0"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/title_section_0"/>
        <item
            android:id="@+id/nav_1"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/title_section_1"/>
        <item
            android:id="@+id/nav_2"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/title_section_2"/>
        <item
            android:id="@+id/nav_3"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/title_section_3"/>

        <item
            android:id="@+id/nav_4"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/title_section_4"/>
        <item
            android:id="@+id/nav_5"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/title_section_5"/>
    </group>

    <item android:title="Advanced">
        <menu>
            <item
                android:id="@+id/nav_6"
                android:icon="@android:drawable/ic_input_get"
                android:title="Settings"/>
            <item
                android:id="@+id/nav_7"
                android:icon="@android:drawable/ic_input_get"
                android:title="About"/>
        </menu>
    </item>

</menu>
