<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.knowroaming.mobile.hellotesting.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/title_text"
        android:layout_below="@id/app_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textSize="@dimen/title_text_size"
        android:text="HelloTesting"/>


    <TextView
        android:id="@+id/imei_one"
        android:layout_below="@id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/imei_one_large_text"/>

    <TextView
        android:id="@+id/imsi_one"
        android:layout_below="@id/imei_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/imsi_one_large_text"/>

    <TextView
        android:id="@+id/imei_two"
        android:layout_below="@id/imsi_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/imei_two_large_text"/>

    <TextView
        android:id="@+id/imsi_two"
        android:layout_below="@id/imei_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/imsi_two_large_text"/>


    <TextView
        android:id="@+id/iccid_text"
        android:layout_below="@id/imsi_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/iccid_large_text"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_below="@id/imsi_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_autoPlay="true" />
</RelativeLayout>
